--- a/DIWebApiTutorial.csproj
+++ b/DIWebApiTutorial.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="5.0.0" />
+    <PackageReference Include="Moq" Version="4.18.2" />
   </ItemGroup>
 
 </Project>
